# collection_de_ejercicios_excepciones

./: CMakeLists.txt  README.md  main.cpp  main.h
ejercicio1/: bandera.cpp  bandera.h
ejercicio2/: error_excepcion.cpp  error_excepcion.h  error_valor.cpp  error_valor.h  main2.cpp  main2.h  main3.cpp  main3.h
ejercicio3/: funciones.cpp  funciones.h
ejercicio4/: mi_excepcion.cpp  mi_excepcion.h
ejercicio5/: excepcion.cpp  excepcion.h
ejercicio6/: excepcion_no_capturada.cpp  excepcion_no_capturada.h
ejercicio7/: archivo.cpp  archivo.h
